apps/finpay-api/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: finpay-api-netpol
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: finpay-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-ingress
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: finpay
      ports:
        - port: 3000
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 5432
          protocol: TCP
    - ports:
        - port: 6379
          protocol: TCP
    - ports:
        - port: 5672
          protocol: TCP
    - ports:
        - port: 443
          protocol: TCP
